# bitcoin-meetings

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/components/: navigation_bar.py  title.py
src/config/: api.py  routes.py  theme.py
src/models/: auth.py  email.py  password.py  route.py  user.py
src/service/: auth_service.py  router.py
src/utils/: email.py  forms.py  password.py
src/views/: _layout_back_arrow.py  _layout_base.py  _layout_error_dialog.py  _layout_navbar.py  _layout_view.py  home_view.py  layout_view.py  login_view.py  profile_view.py  register_view.py
