[project]
name = "bitcoin-meetings"
version = "0.1.0"
description = "Bitcoin Meeting Directory"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.bitcoinmeetings"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Bitcoin Meetings Directory"

# company name to display in about app dialogs
company = "Bitcoin Meetings Directory"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Bitcoin Meeting Directory"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}